# aita_contracts

./: Cargo.toml  build.sh  package.json
as/: as-pect.config.js  asconfig.json
as/release/: aita-ft.wasm
as/src/aita-ft/assembly/: index.ts  metadata.ts
ft/: Cargo.toml
ft/src/: lib.rs
nft/: Cargo.toml
nft/src/: lib.rs
res/: defi.wasm  fungible_token.wasm
src/aita-ft/__tests__/: token.unit.spec.ts
src/aita-ft/assembly/: index.ts
tests/sim/: no_macros.rs
