[package]
name = "fungible-token-wrapper"
version = "0.0.1"
authors = ["ITracers <muhametshin.1997@gmail.com>"]
edition = "2018"

[dev-dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "3.1.1"

# remember to include a line for each contract
fungible-token = { path = "./ft" }
non-fungible-token = { path = "./nft" }
defi = { path = "./defi" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "ft",
  "nft",
  "defi",
]
